static/calendar.css
#calendar {
    width: 100%;
    --cal-border: #444;
    --cal-cell-default: white;
    --cal-cell-today: #a491b8;
    --cal-cell-disabled: #CCC;
    --cal-primary: #443752;
    --cal-cover: #00000055;
}

#calendar #calendar-controls button {
    width: 45px;
    padding: 5px;
    margin-right: 5px;
    background-color: var(--cal-primary);
    border: 0;
    line-height: 0.8;
    cursor: pointer;
}

#calendar #calendar-controls #calendar-current-date {
    display: inline;
    padding: 0;
    margin: 0;
}

#calendar #calendar-loading-cover {
    position: absolute;
    background-color: var(--cal-cover);
}

#calendar table {
    width: calc(100% - 1px);
    table-layout: fixed;
    border-collapse: collapse;
    border-spacing: 0;
}

#calendar table tr.hidden { display: none; }

#calendar table td {
    border: 1px solid var(--cal-border);
    border-collapse: collapse;
    border-spacing: 0;
    background-color: var(--cal-cell-default);
    overflow: hidden;

    font-size: 12px;
    white-space: nowrap;
    text-overflow: ellipsis;

    height: 80px;
    /*
    HACK: not actually obeyed by good browsers due to table-layout, but still
    required to trigger it and make all the columns the same width
    */
    width: 14%;
    vertical-align: top;
    padding: 0;
}

#calendar table td br {
    display: none;
}

#calendar table td a {
    text-decoration: none;
    color: var(--text-color);
}

#calendar table td.disabled { background-color: var(--cal-cell-disabled); }
#calendar table td.today    { background-color: var(--cal-cell-today); }

#calendar table td .date-header {
    height: 14px;
    background-color: var(--cal-primary);
    color: white;
    padding: 1px;
    width: calc(100% - 2px);
    font-size: 12px;
}

#calendar #calendar-info-container {
    position: absolute;
    filter: drop-shadow(-1px 6px 3px rgba(50, 50, 0, 0.5));
    display: none;
}

#calendar #calendar-info-container.showing {
    display: block;
}

#calendar #calendar-info {
    position: absolute;
    width: 300px;
    background-color: white;
    border: 1px solid black;
    padding: 10px;
    z-index: 999;
    word-wrap: break-word;
    white-space: normal;
}

#calendar #calendar-info #calendar-info-close {
    float: right;
    font-weight: bold;
}

#calendar #calendar-info h3 {
    padding: 0;
    padding-right: 20px;
    margin: 0;
    text-align: unset;
}

#calendar #calendar-info #calendar-info-description {
    padding-top: 10px;
}

@media screen and (max-width: 740px) {
    #calendar table td br {
        display: inline;
    }
}

@media screen and (max-width: 700px) {
    /* The h3 centering that happens at this size causes horizontal scrolling */
    #calendar #calendar-info h3 {
        padding-right: 0;
    }
}

